[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Bullets/BaseBullet.gd" type="Script" id=1]

[node name="BaseBullet" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimSprite" type="AnimatedSprite" parent="."]

[node name="ColShape" type="CollisionShape2D" parent="."]

[node name="VisiNoti" type="VisibilityNotifier2D" parent="."]

[connection signal="screen_exited" from="VisiNoti" to="." method="_on_VisiNoti_screen_exited"]
